# AI-Agents-for-Code-Review-and-Security-using-Open-Source-Models

./: .env.example  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.bak  README.md  a.txt  docker-compose-deploy.yml  docker-compose.yml  env.txt_ollama  gitlab-ci.txt  package-lock.json  package.json  requirements.txt
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: dependencies.py  main.py  models.py  utils.py
backend/app/ai/: api.py  dependencies.py  dirtree.py  main.py  requirements.txt  visualise_supervisor.py  visualize_graph.py
backend/app/ai/agent/: base_agent.py
backend/app/ai/app/: config.py  visualize_graph.py
backend/app/ai/code_analysis/: ast_analyser.py  code_processor.py
backend/app/ai/database/: database_manager.py  db_query.py  init_chroma.py
backend/app/ai/doc_loader/: doc_chunker.py  web_doc_loader.py
backend/app/ai/llm/: llm.py
backend/app/ai/llm_rag_database/: README.md  ai_init.py  create_rag_db.py  db.py  launch.py
backend/app/ai/model_config/: model_configurator.py
backend/app/ai/workflow/: ast_node.py  graph_config.py  integrated_node.py  utils.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: ast_analysis.py  code_review.py  code_review_form.py  database.py  documents.py  graph.py  items.py  login.py  (+1 more)
backend/app/core/: config.py  db.py  security.py
backend/app/docling/: processor.py
backend/app/tests/: conftest.py
backend/app/travis-ai/: .gitignore  README.md  api.py  commands.txt  requirements.txt
backend/libs/git_analyser/: README.md  setup.py
(+109 files in other folders)
