[project]
name = "backend"
version = "0.1.0"
description = "backend for Code Review for Security with Open Source Models"
readme = "README.md"
requires-python = ">=3.11"
# Backend API Requirements
dependencies = [
"fastapi[standard]<1.0.0,>=0.115.7",
"pydantic==2.10.6",
"pytest==8.3.4",
"pydantic-settings==2.7.1",
"python-multipart==0.0.20",
"uvicorn==0.34.0 ",
"gunicorn==23.0.0",
"docling",
]

